adding data to each object

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
                     name:'french press',
                     image: '',
                     facts: {
-                        grind:'',
-                        measure: '',
-                        water: '',
-                        method: '',
+                        grind:'coarse',
+                        measure: '1 heaping tablespoon per cup + 1 for the pot',
+                        water: '2 - 3 minutes off the boil (200 - 250F)',
+                        method:['Put ground coffee in the bottom.','"Bloom" the grounds by pouring water just to fully saturate the coffee.',' Wait 30 seconds.',' Pour remaining water to top of the frame.',' Let stand 4 minutes.'],
                         extras: {
                             caution: [],
                             tips: [],
@@ -24,13 +24,13 @@
                     name: 'auto-drip',
                     image: '',
                     facts: {
-                        grind:'',
-                        measure: '',
-                        water: '',
-                        method: '',
+                        grind:'medium to fine',
+                        measure: '1 heaping tablespoon or cup + 1 for the pot',
+                        water: 'Pour in cold water',
+                        method: ['Pour in cold water.', 'Add coffee to filter.', 'Turn on filter.'],
                         extras: {
-                            caution: [],
-                            tips: [],
+                            caution: ['Do not leave coffee on a heated base.'],
+                            tips: ['Metal or gold cone filters may want a slightly more coarse grind than paper.', 'Pour into a thermos to keep hot.'],
                         }
                     }
                 },
@@ -38,10 +38,10 @@
                     name:'pour-over',
                     image: '',
                     facts: {
-                        grind:'',
-                        measure: '',
-                        water: '',
-                        method: '',
+                        grind:'Fine to Medium-fine',
+                        measure: '3 heaping tabelspoons per 120z. cup',
+                        water: '2 - 3 minutes of the boil (200 - 205F)',
+                        method: ['"Bloom" the grounds by pouring the water to fully saturate the coffee.', 'Wait 30 seconds.', 'Pour water evenly over the gorunds.', 'Add more water after about half of it has drained.', 'Repaet to desired yield.'],
                         extras: {
                             caution: [],
                             tips: [],
@@ -52,10 +52,30 @@
                     name: 'percolator',
                     image: '',
                     facts: {
-                        grind:'',
-                        measure: '',
-                        water: '',
-                        method: '',
+                        grind:'Medium to Medium-Coarse',
+                        measure: '1 heaping tablespoon per cup + 1 for the pot',
+                        water: 'Add water to the fill line.',
+                        method: [
+                            'Add coffee to the filter basket.',
+                            {
+                                type:'',
+                                info:''
+                            },
+                            {
+                                type:'',
+                                info:''
+                            },
+                            {
+                                type:'',
+                                info:''
+                            },
+                            {
+                                type:'',
+                                info:''
+                            }
+
+                    
+                        ],
                         extras: {
                             caution: [],
                             tips: [],
@@ -63,13 +83,13 @@
                     } 
                 },
                 { 
-                    name: 'stove top espresso',
+                    name: 'stovetop espresso',
                     image: '',
                     facts: {
                         grind:'',
                         measure: '',
                         water: '',
-                        method: '',
+                        method: [],
                         extras: {
                             caution: [],
                             tips: [],
@@ -84,7 +104,7 @@
                         grind:'',
                         measure: '',
                         water: '',
-                        method: '',
+                        method: [],
                         extras: {
                             caution: [],
                             tips: [],
