--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
         <meta charset="UTF-8"/>
         <title>How Do You Brew? | High Point Brew Methods</title>
         <script>
+            const water1 = '2-3 minutes off the boil (200 - 250F)';
+            const measure1 = '1 heaping tablespoon per cup + 1 for the pot';
+            const bloom = '"Bloom" the grounds by pouring water just to fully saturate the coffee.';
             const brewMethods = [
                 { 
                     name:'french press',
                     image: '',
                     facts: {
                         grind:'coarse',
-                        measure: '1 heaping tablespoon per cup + 1 for the pot',
-                        water: '2 - 3 minutes off the boil (200 - 250F)',
-                        method:['Put ground coffee in the bottom.','"Bloom" the grounds by pouring water just to fully saturate the coffee.',' Wait 30 seconds.',' Pour remaining water to top of the frame.',' Let stand 4 minutes.'],
+                        measure: measure1,
+                        water: water1,
+                        method:['Put ground coffee in the bottom.', bloom,' Wait 30 seconds.',' Pour remaining water to top of the frame.',' Let stand 4 minutes.'],
                         extras: {
                             caution: [],
                             tips: [],
@@ -40,8 +43,8 @@
                     facts: {
                         grind:'Fine to Medium-fine',
                         measure: '3 heaping tabelspoons per 120z. cup',
-                        water: '2 - 3 minutes of the boil (200 - 205F)',
-                        method: ['"Bloom" the grounds by pouring the water to fully saturate the coffee.', 'Wait 30 seconds.', 'Pour water evenly over the gorunds.', 'Add more water after about half of it has drained.', 'Repaet to desired yield.'],
+                        water: water1,
+                        method: [ bloom, 'Wait 30 seconds.', 'Pour water evenly over the gorunds.', 'Add more water after about half of it has drained.', 'Repaet to desired yield.'],
                         extras: {
                             caution: [],
                             tips: [],
@@ -53,25 +56,25 @@
                     image: '',
                     facts: {
                         grind:'Medium to Medium-Coarse',
-                        measure: '1 heaping tablespoon per cup + 1 for the pot',
+                        measure: measure1,
                         water: 'Add water to the fill line.',
                         method: [
                             'Add coffee to the filter basket.',
                             {
-                                type:'',
-                                info:''
+                                type:'Electric Perk',
+                                info:'Turn on'
                             },
                             {
-                                type:'',
-                                info:''
+                                type:'Stovetop',
+                                info:'Turn heat to medium'
                             },
                             {
-                                type:'',
-                                info:''
+                                type:'Gas Stove',
+                                info:'Flame should not creep up on sides'
                             },
                             {
-                                type:'',
-                                info:''
+                                type:'Electric Stove',
+                                info:'Pre-heat stovetop first. Once "perking" begins, continue for 3 - 4 minutes. Remove from heat. Remove filter basket before pouring.'
                             }
 
                     
@@ -86,10 +89,21 @@
                     name: 'stovetop espresso',
                     image: '',
                     facts: {
-                        grind:'',
-                        measure: '',
-                        water: '',
-                        method: [],
+                        grind:'Fine (not espresso)',
+                        measure: 'Fill the filter chamber and gently level grounds. Do not pack.',
+                        water: 'To the bottom of the pressure release valve.',
+                        method: [
+                            'Turn heat to medium',
+                            {
+                                type:'Gas Stove',
+                                info:'Flame should not creep up on sides'
+                            },
+                            {
+                                type:'Electric Stove',
+                                info:'Pre-heat stovetop first. Once "perking" begins, continue for 3 - 4 minutes. Remove from heat. Remove filter basket before pouring.'
+                            }
+                    
+                        ],
                         extras: {
                             caution: [],
                             tips: [],
@@ -101,10 +115,10 @@
                     name: 'chemex',
                     image: '',
                     facts: {
-                        grind:'',
-                        measure: '',
-                        water: '',
-                        method: [],
+                        grind:'Medium to Medium-Coarse',
+                        measure: measure1,
+                        water: water1,
+                        method: ['Wet the filter with hot water inside the vessel, then pour out excess water.', bloom, 'Wait 30 seconds.', 'Pour water evenly over grounds to fill cone. Repeat as needed until coffee reaches the bump.'],
                         extras: {
                             caution: [],
                             tips: [],
