--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
             </div>`;
             
             console.log(brewMethods);
-            <script src="js/plugins.js"></script>
-            <script src="js/scripts.js"></script>
+            <script src="js/plugins.js"/>
+            <script src="js/scripts.js"/>
            
         </script>
     </body>
